sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value p
		}else if (p!=0) {
                          ^AlgInsertionSort:10: error: not found: value p
			p =0
                        ^